2002-04-23  Daniel Morgan <danmorg@sc.rr.com>

	* TODO: modified - added classes TODO, and
	a poor attempt at System.Data plan

2002-04-23  Daniel Morgan <danmorg@sc.rr.com>

	* ChangeLog: modified - put tabs where they belong
	
	* System.Data.SqlClient/SqlDataReader.cs
	* System.Data/DataColumn.cs: modified - compile errors
	trying to compile SqlDataAdapter and dependencies

2002-04-23  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data.SqlTypes/SqlBoolean.cs
	* System.Data.SqlTypes/SqlCompareOptions.cs
	* System.Data.SqlTypes/SqlInt32.cs
	* System.Data.SqlTypes/SqlString.cs: added - new stubs

	* System.Data/DataTable.cs
	* System.Data.SqlClient/SqlCommand.cs
	* System.Data.SqlClient/SqlConnection.cs
	* System.Data.SqlClient/SqlError.cs
	* System.Data.SqlClient/SqlTransaction.cs: modified - 
	misc. tweaks

	* System.Data.SqlClient/SqlException.cs: modified -
	missing Message on indexer for Message property

2002-04-21  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data.SqlClient/SqlCommand.cs: modified - to 
	compile using mcs.  This problem is
	returning a stronger type in csc vs. msc

	* System.Data.SqlClient/SqlConnection.cs: modified - msc
	can not do a using PGconn = IntPtr; and then declare
	with PGconn pgConn = IntPtr.Zero;
	Thiw works under csc though.  Had to comment using and
	changed declaration to IntPtr pgConn = IntPtr.Zero;
	Also, got rid of compile warnings for hostaddr and port.

	* System.Data.SqlClient/SqlErrorCollection.cs: modified - got
	rid of compile warnings.  Commented MonoTODO attribute because mcs
	doesn't seem to work with C# array property indexer (Item)
	this[int index]

	* System.Data.SqlClient/SqlParameterCollection.cs: modified -
	commented MonoTODO attribute for indexer for mcs compiling

	* Test/TestSqlIsolationLevel.cs:
	* Test/TestSqlInsert.cs:
	* Test/TestSqlException.cs: modified -
	removed extra ExecuteNonQuery which caused two inserted rows

2002-04-20  Daniel Morgan <danmorg@sc.rr.com>
