@@ -1,3 +1,12 @@
+2002-04-23  Rodrigo Moya <rodrigo@ximian.com>
+
+	* System.Data.Common/DataAdapter.cs:
+	* System.Data.Common/DataColumnMappingCollection.cs:
+	* System.Data.Common/DataTableMappingCollection.cs:
+	* System.Data.Common/DbDataPermission.cs:
+	* System.Data.Common/DbDataPermissionAttribute.cs: some
+	compilation errors fixed.
+
 2002-04-23  Daniel Morgan <danmorg@sc.rr.com>
 
 	* TODO: modified - added classes TODO, and
